Fix Collapse, make Collapse support untrolled component and add more Document

--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  margin: 1rem 0;
 
   &:after,
   &:before {
